Only regexp the filename, not the whole path for save incremental

And incremental backup, too.

BUG:421792